--- a/web_server/templates/post_file.html
+++ b/web_server/templates/post_file.html
@@ -5,13 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Page Title</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
-    <script src="main.js"></script>
 </head>
 <body>
-
-    111222333
-    <form action="/post_test" method="post" ENCTYPE="multipart/form-data">
+    文件上传测试
+    <form action="/post_file" method="post" ENCTYPE="multipart/form-data">
         <div>
             文件
             <input type="file" name="file">
